--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/assets/jquery/jquery.js"></script>
+  <script src="./assets/jquery/jquery.js"></script>
   <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
   <title>HBD TO RATU</title>
 </head>
 <body>
-  <audio autoplay src="/assets/audio.mp3"></audio>
+  <audio autoplay src="./assets/audio.mp3"></audio>
   <div class="container">
     <div class="box">
       <h1  >GIFT CARD</h1>
-      <img src="/assets/dino.png" alt="" class="dino">
+      <img src="./assets/dino.png" alt="" class="dino">
       <h2>HAPPY BIRTHDAY AYANG ❤❤❤</h2>
       <h4>RAWR FROM MAS PACAR</h4>
       <button id="btn">BUKA DAN TUTUP SURAT</button>
